--- a/global.css
+++ b/global.css
@@ -1,29 +1,62 @@
 *{
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
 .content{
     padding: 1rem;
 }
 
-ol.pokemons{
+.pokemons {
     display: grid;
     grid-template-columns: 1fr 1fr;
     list-style: none;
-    padding: 0;
+    padding:0;
     margin: 0;
 }
-ol.pokemons li{
-    padding: 2rem 1rem;
-    margin: .5rem;
-    background-color: #14a06f;
-    border-radius: 1rem;
-    color: #ffff;
-    display: flex;
+
+.pokemon{
+    display:flex;
     flex-direction: column;
+    margin: .5  ;
+    padding: 1rem;
+    border-radius:1rem;
+    background-color: #49d0b0;
+    color: #fff;
+}
+.pokemon .name{
+    color: #fff;
+    margin-bottom:  .25rem ;
+}
+.pokemon .number{
+    color: #fff;
+    opacity:0.3;
+    text-align: right;
+    font-size: .825rem;
+}
+.pokemon .detail{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.pokemon .detail .types{
+    padding:0;
+    margin: 0;
+    list-style: none;
 }
 
-ol.pokemons li img{
-    max-width: 100%;
-    height: 80px;
+.pokemon .detail .types .type{
+    background-color: #61e1ca;
+    color: #fff;
+    padding: 0.25rem .5rem;
+    margin: .225rem;
+    font-size: .625rem;
+    border-radius: .7rem;
+    
+}
+
+.pokemon .detail img{
+    max-width:100%;
+    height: 100px;
 }
